Fix breadcrumbs view&align table elements (#5318)

--- a/app/src/pages/inside/common/testCaseList/testCaseList.scss
+++ b/app/src/pages/inside/common/testCaseList/testCaseList.scss
@@ -45,6 +45,11 @@
   border-radius: 4px;
   box-sizing: content-box;
 
+  & > div:first-child {
+    align-self: baseline;
+    margin-top: 14px;
+  }
+
   &:global(.is-dragging-row) :global([class*='table-row-content']) {
     opacity: 0.3;
   }
